// Copyright (c) 2019 Target Brands, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";
import "product_state.proto";
import "schema_state.proto";

message ProductPayload {
    enum Action {
        UNSET_ACTION = 0;
        PRODUCT_CREATE = 1;
        PRODUCT_UPDATE = 2;
        PRODUCT_DELETE = 3;
    }

    Action action = 1;

    // Approximately when transaction was submitted, as a Unix UTC
    // timestamp
    uint64 timestamp = 2;

    ProductCreateAction product_create = 3;
    ProductUpdateAction product_update = 4;
    ProductDeleteAction product_delete = 5;
}

message ProductCreateAction {
    // product_namespace and product_id are used in deriving the state address
    Product.ProductType product_namespace = 1;
    string product_id = 2;
    string owner = 3;
    repeated PropertyValue properties = 4;
}

message ProductUpdateAction {
    // product_namespace and product_id are used in deriving the state address
    Product.ProductType product_namespace = 1;
    string product_id = 2;
    // this will replace all properties currently defined
    repeated PropertyValue properties = 3;
}

message ProductDeleteAction {
    // product_namespace and product_id are used in deriving the state address
    Product.ProductType product_namespace = 1;
    string product_id = 2;
 }
